--- a/activity_ar.html
+++ b/activity_ar.html
@@ -429,7 +429,7 @@
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
       <!-- الشعار على اليسار -->
-      <a class="navbar-brand" href="index_ar.html" aria-label="مكسبو 2025">
+      <a class="navbar-brand" href="index.html" aria-label="مكسبو 2025">
         <img src="assets/img/logo.png" alt="مكسبو 2025" />
       </a>
 
@@ -606,7 +606,7 @@
                 <div class="col-12">
                     <p class="mb-0">
                         حقوق النشر 2025 | جميع الحقوق محفوظة - تصميم
-                        <a href="index_ar.html">فريق مكسبو التقني</a>
+                        <a href="index.html">فريق مكسبو التقني</a>
                     </p>
                 </div>
             </div>
